# cprimeprimecode

./: .gitignore  Makefile  README.md  auto_pull_code.sh  c++_thread.txt  gdb.c  gdb.cpp  git.sh  git_commit_pull_push.sh  install_vim.sh  memory_manager  memory_manager.cpp  readme.txt  test.cpp  update.sh
apue.3e_notes/: 1.第三章IO.docx
c++_code/: Hanoi.cpp  Makefile  TemplateMakefile  a.out  aboutarraypoint.cpp  abstraticclass.cpp  advancearray.cpp  auto_ptr.cpp  c++thread.cpp  call_class_member_function.cpp  cc++funcpointer.cpp  class_assignment.cpp  classandcache.cpp  classnesting.cpp  classtypeconvert.cpp  classwrapper.cpp  color.cpp  commonfunctemplate.cpp  commonmacro_assert.cpp  constructor.cpp  cppstruct.cpp  cppunion.cpp  emptyclass.cpp  escapecharacter.cpp  friendkeyword.cpp  friendtest.cpp  functemplate.cpp  inheritclass.cpp  lambda.cpp  main.cpp  mutable.cpp  newadvanceuse.cpp  newarray.cpp  overloadfunction.cpp  overwriteoperator.cpp  referenceinsidefunctionbind.cpp  rtti.cpp  shared_ptr_demo.cpp  templatecover.cpp  templatemeta.cpp  (+9 more)
c++_code/STLlib/: .chaincontainter.cpp.swp  .red_black_tree_containter.cpp.swp  Makefile  algorithmconcept.cpp  app  bitset.cpp  chaincontainter.cpp  containter_and_iterator.cpp  deque.cpp  list.cpp  map_multimap_hashmap.cpp  map_multimap_hashset.cpp  priority_queue.cpp  queue.cpp  red_black_tree_containter.cpp  reverseiterator.cpp  set_multisets_hashset.cpp  stack.cpp  stl.cpp  stlswap.cpp  stringcontainter.cpp  uninitializer_function.cpp  vector.cpp
c++_code/connectdatabase/: connectmysql.cpp
c++_code/const/: Makefile  app  const 详解.wps  const.cpp
c++_code/constructor/: Makefile  app  delegateconstructor.cpp  equaloperator.cpp
c++_code/designpatterns/: Makefile  app  designpattern.note  simple_factory  设计模式笔记.docx
c++_code/designpatterns/vs2013_project/build_linux/: CMakeLists.txt
c++_code/encapslulationthread/: Makefile  basethread.cpp  basethread.h  childthread.cpp  childthread.h  main.cpp
c++_code/friendkeyword/: friendkeyword.cpp
c++_code/linux/: echowithcolor.txt  gitcommand.sh  hello.sh  linux_c++.txt  testexec.sh
c++_code/linux_tools_source_code/: setupsignals.cpp
c++_code/manager_memory/: memory_primitives.cpp
c++_code/notes/: cprimeprime_note.txt
c++_code/operatorfile/: 1.txt  2.txt  Makefile  binary_position_read_write.cpp  binary_random_position_read_write.cpp  demo.cpp  input.cpp  ledclienthelp  ofstream_and_ifstream.cpp  out.cpp  read_write_file.cpp  sstream.cpp  txt_binary_read_write.cpp  txt_random_position_read_write.cpp  txt_write_read.cpp
c++_code/opreatefile/: .sstream.cpp.swp  Makefile  sstream.cpp
c++_code/pointer/: Makefile  autopointer.cpp  main.cpp  smart_pointer.cpp  strblob.cpp  strblob.h
c++_code/polymorphism_virtual/: main.cpp
c++_code/studyc++primer/: Makefile  Sales_item.h  app  cin.cpp  const.cpp  main.cpp  result.txt  sales.sln  tags
c++_code/template/: Array.cpp  Array.h  Makefile  classtemplate.cpp  classtemplateinherit.cpp  friendclasstempalte.cpp  main.cpp  overidefinal.cpp  templateasparameter.cpp  templatefunction.cpp  templatefunction.h  traits_template.cpp  variadictemplate.cpp
c_code/: a.out  calculator.c  getlocalip.c  helloworld.c  opendir.c  pointer.c  purchasesystem.c  secondpointer.c  syslogtest.c  timer.c
codesnippets/: qt执行js代码.txt
doc/: linux_shell.docx  linux_shell编程.docx  linux开发工具.docx  linux系统编程.docx  stl与泛型编程.docx
effective_c++/: 03_use_const_whenever_possible.cpp  08_prevent_exceptions_from_leaving_destructors.cpp  09_never_call_virtual_function_during_ctor_or_dtor.cpp  13_user_objects_to_manager_resource.cpp  25_consider_support_for_a_non_throwing_swap.cpp  49_understand_the_behavior_of_new_handler.cpp  51_adhere_to_convention_when_writing_new_and_delete.cpp  53_write_placement_delete_if_you_write_placement_new.cpp  54_familiarize_yourself_with_the_stl.cpp  CMakeLists.txt  build.sh
linux_study/: 01byteorder.c  02addr.c  Makefile  readme.txt  study_linux.txt
linux_study/large_concurrency_server/base_object/: CMakeLists.txt  bf_test.cpp  build.sh  readme.txt  thread.cpp  thread.h  thread_test.cpp
linux_study/large_concurrency_server/lmuduo/muduo/base/: Atomic.h  CMakeLists.txt  Condition.cc  CurrentThread.h  Exception.cc  Mutex.h  Singleton.h  Thread.cc  ThreadLocalSingleton.h  ThreadPool.cc
linux_study/large_concurrency_server/lmuduo/muduo/base/tests/: BlockingQueue_bench.cc  BlockingQueue_test.cc  BoundedBlockingQueue_test.cc  CMakeLists.txt  Exception_test.cc  LogFile_test.cc  Singleton_test.cc  ThreadLocalSingleton_test.cc  ThreadLocal_test.cc  ThreadPool_test.cc  Thread_test.cc  Timestamp_unittest.cc
linux_study/large_concurrency_server/lmuduo/tests/: CMakeLists.txt  CountDownLatch_test1.cc  CountDownLatch_test2.cc  Reactor_test03.cc  Reactor_test06.cc  Reactor_test11.cc  Test_lower_bound_upper_bound.cpp  bsa.cc  deadlock_test1.cc  deadlock_test2.cc  pthread_atfork_test.cc  rov.cpp
qtcode/: custom_control_qt.7z  qtnotes.txt
server_study/: client.cpp  client_sock.cpp  client_sock.h  readme  server.cpp  server_sock.cpp  server_sock.h
sh/: 01if.sh  02case.sh  03for.sh  04countfile.sh  05printstar.sh  06while_print_star.sh  07until.sh  08select.sh  09func.sh  10call_fun.sh  11str_operation.sh  12shfit.sh  13trap.sh  check_server_start.sh  compare.sh  copy_content_file.sh  delete_size_zero_file.sh  exist_file.sh  find.sh  keytest.sh  lock_screen.sh  max_file.sh  modulo_operation.sh  position_variable.sh  print_nopasswd_user.sh  probe_ip.sh  read_file.sh  read_key.sh  set_brightness.sh  simulated_landing.sh  sudo_chmod_+x.sh  test_ip.sh  test_who_using.sh  tetris.sh  unrar.sh  unzip.sh
stl_source_code/: Makefile  algo.h  algobase.h  algorithm  deque  function.h  generate_call_graphic.sh  iterator  iterator.h  list  main.E  main.cpp  main.s  origin_main.cpp  pair.h  queue  stack  stl_algo.h  stl_algobase.h  stl_alloc.h  stl_bvector.h  stl_construct.h  stl_deque.h  stl_function.h  stl_iterator.h  stl_list.h  stl_queue.h  stl_stack.h  stl_vector.h  tempbuf.h  type_traits.h  vector  vector.h
win32CoreProgram/: .clang-format
(+955 files in other folders)
